--- a/Draft/Draft.csproj
+++ b/Draft/Draft.csproj
@@ -122,9 +122,18 @@
     <Compile Include="DB\Supplier.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Extension\Material.cs" />
     <Compile Include="Tools\BaseViewModel.cs" />
     <Compile Include="Tools\CustomCommand.cs" />
+    <Compile Include="ViewModels\EditMaterialViewModel.cs" />
+    <Compile Include="ViewModels\EditViewModel.cs" />
     <Compile Include="ViewModels\MaterialListViewModel.cs" />
+    <Compile Include="Views\EditMaterial.xaml.cs">
+      <DependentUpon>EditMaterial.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\EditView.xaml.cs">
+      <DependentUpon>EditView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MaterialList.xaml.cs">
       <DependentUpon>MaterialList.xaml</DependentUpon>
     </Compile>
@@ -140,6 +149,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\EditMaterial.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\EditView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MaterialList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
